--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
       </div>
     </div>
   </div> -->
-  <div style="text-align:center;width:100%;bottom:20px;">
+  <div style="text-align:center;line-height:40px;width:100%;bottom:40px;">
     <a href="http://www.beian.miit.gov.cn" style="color:gray;">
       粤ICP备18061373号
     </a>
